--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -6,8 +6,10 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageView_chat_to_row"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@android:color/black"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
@@ -28,8 +30,8 @@
         android:maxWidth="240dp"
         android:padding="16dp"
         android:text="hello 123 .dfs sdsdfsf dfd dfsdf dsfsf dsfdf dfsfsf dfsfsdfd sdsfsdf"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_chat_to_row"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView_chat_to_row"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
