--- a/app/src/main/res/layout/latest_message_row.xml
+++ b/app/src/main/res/layout/latest_message_row.xml
@@ -5,31 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageView_latest_msg_row"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        app:civ_border_width="4dp"
+        app:civ_border_color="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_latest_msg_row"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="UserName"
+        tools:text="UserName"
         android:textColor="@android:color/black"
         android:textStyle="bold"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/chatMsg_latest_msg_row"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView_latest_msg_row"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -46,6 +49,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView_latest_msg_row"
+        app:layout_constraintTop_toBottomOf="@+id/textView_latest_msg_row" />
 </android.support.constraint.ConstraintLayout>
